tests/sumo/extended/vaporizer/errors/end_empty/errors.sumo
Error: Attribute 'end' in definition of a vaporizer is empty.
Quitting (on error).
